[B]0.4.3[/B]
Updated translations from transifex
Added option for "on-screen" music info
Set default focus to subtitles
Minor tweak to simple home - submenu on click up from submenu closes it
Fix lovefilm in sets - no item preload so reports right page number
Fix broken addon text overlapping

[B]0.4.2[/B]
Altered mixed widget scroll behaviour to be up for simple and down for panel
Added option to scroll between 'simple' widget types on up/down as default
 -- option to prevent in Skin Settings > Home > Manage custom widgets
Added no-videologo.png and no-musiclogo.png to extras/widgets folder 
 -- change these for what displays when no clearlogo is available to widgets
Changed Artwork Downloader to download bulk depending on its own settings
Fixed widget label persistence when other menu ids are open
Added "Launch" button for Addon info

[B]0.4.1[/B]
Fixed focus of mixed widget to first item
Fixed clock always showing in music vis
Fixed double assignment of ids in "View Options"
Swapped In-progress and Spotlight on mixed widget
Added falback icon for logos on widget information

[B]0.4.0[/B]
Addition of Mixed Widget
Fixed video library update label not long enough
Fixed DialogExtendedProgress.xml from closing on Home.xml
Added banner and info-wall to add-ons
Added half stars to Alaska Black font
Re-instated Arctic fade for simple home screen
-- add to guisettings.xml to revert: 
-- <setting type="bool" name="skin.arctic.home.simple.fade">true</setting>

[B]0.3.9[/B]
Moved ratings and resolution flags out to extras folder for user customisation
Dialog.Close(all,force) to Home.xml -- prevent DialogVideoInfo.xml staying open.
Made Seekbar cache bar more visible for light osd
More OSD updates...

[B]0.3.8[/B]
Fixed Poster Panel Label
Updates to RCB info screen (play game, trailer, selectable art)
Fixed RCB Autoplay video in banner and info wall
Altered Cover and Info RCB views to remove borders for 3d boxart
Added option to enable/disable submenu arrow