@@ -515,7 +515,7 @@
 									<onclick>SendClick(2003,10)</onclick>
 									<icon>aeonflags/addition/OSDInfoNF.png</icon>
 									<thumb>aeonflags/addition/OSDInfoFO.png</thumb>
-									<visible>Container.Content(musicvideos)</visible>
+									<visible>Container.Content(musicvideos) | Container.Content(episodes)</visible>
 								</item>
 								<item id="4">
 									<description>Get theme</description>
