@@ -179,7 +179,7 @@
 								<label>$INFO[ListItem.Label]</label>
 								<font>Font-Alaska-S25-BL</font>
 								<textcolor>Mod_Tags_Alt</textcolor>
-								<scroll>false</scroll>
+								<scroll>true</scroll>
 								<align>left</align>
 							</control>
 							<control type="label">                        
@@ -235,7 +235,7 @@
 								<label>$INFO[ListItem.Label]</label>
 								<font>Font-Alaska-S25-BL</font>
 								<textcolor>white</textcolor>
-								<scroll>false</scroll>
+								<scroll>true</scroll>
 								<align>left</align>
 							</control>
 							<control type="label">                        
